--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                 </div>
                             </a>
                         </div> -->
-                      <div class="d-flex flex-column pe-4  text-center"> <h1 class="text-center">Possibility Power Conference 2024</h1> </div>
+                      <div class="d-flex flex-column pe-4  text-center  "> <h1 class="text-center  h1">Possibility Power Conference 2024</h1> </div>
                         <div class="d-flex flex-column pe-4 border-end">
                             <span class="text-white-50">Have any questions?</span>
                             
@@ -153,11 +153,11 @@
                         </div>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button"  style="background-color: white;" data-bs-target="#carouselId" data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button"  style="background-color: #842281;" data-bs-target="#carouselId" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button"  style="background-color: white;"data-bs-target="#carouselId" data-bs-slide="next">
+                <button class="carousel-control-next" type="button"  style="background-color: #842281;"data-bs-target="#carouselId" data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
