--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                 </div>
                             </a>
                         </div> -->
-                      <div class="d-flex flex-column pe-4  text-center  "> <h1 class="text-center  h1">Possibility Power Conference 2024</h1> </div>
+                      <div class="d-flex flex-column pe-4  text-center  "> <h1 class="text-center  h1" style="color:#922222">Possibility Power Conference 2024</h1> </div>
                         <div class="d-flex flex-column pe-4 border-end">
                             <span class="text-white-50">Have any questions?</span>
                             
