--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
             <div class="conta">
                 <nav class="navbar navbar-dark  ">
                     <a href="index.html" class="navbar-brand">
-                        <!-- <div> -->
+                        <div>
                             <img src="images/rccg.png"  height="60px"    loading="lazy" class="   object-cover aspect-square rounded-full" alt="">
-                        <!-- </div>   -->
+                        </div>  
                          <!-- <h5 class="text-white fw-bold d-block">  HIGHER GROUND <span class="text-blue-600">ASSEMBLY</span>
                           </h5>
                           <p class="text-xs italic text-[#515b6b]">
@@ -76,8 +76,8 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                   <div class="collapse navbar-collapse bg-transparent" id="navbarCollapse">
-                   
-                        <!-- <div class="navbar-nav ms-auto mx-xl-auto p-0">
+                
+                         <div class="navbar-nav ms-auto mx-xl-auto p-0">
                             <a href="index.html" class="nav-item nav-link active text-secondary">Home</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
                             <a href="service.html" class="nav-item nav-link">Services</a>
@@ -92,17 +92,17 @@
                                 </div>
                             </div>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
-                        </div> -->
+                        </div> 
                     </div> 
-                    <!-- <div class="d-none d-xl-flex flex-shirink-0">
+                    <div class="d-none d-xl-flex flex-shirink-0">
                         <div id="phone-tada" class="d-flex align-items-center justify-content-center me-4">
                             <a href="" class="position-relative animated tada infinite">
-                                <i class="fa fa-phone-alt text-white fa-2x"></i>
-                                <div class="position-absolute" style="top: -7px; left: 20px;">
+                                <!-- <i class="fa fa-phone-alt text-white fa-2x"></i> -->
+                                <!-- <div class="position-absolute" style="top: -7px; left: 20px;">
                                     <span><i class="fa fa-comment-dots text-secondary"></i></span>
-                                </div>
+                                </div> -->
                             </a>
-                        </div> -->
+                        </div>
                       <div class="d-flex flex-column pe-4  text-center  "> <h1 class="text-center  h1" style="color:#922222">Possibility Power Conference 2024</h1> </div>
                         <div class="d-flex flex-column pe-4 border-end">
                             <span class="text-white-50">Have any questions?</span>
