--- a/index.html
+++ b/index.html
@@ -106,7 +106,6 @@
                       <div class="d-flex flex-column pe-4  text-center  "> <h1 class="text-center  h1" style="color:#922222">Possibility Power Conference 2024</h1> </div>
                         <div class="d-flex flex-column pe-4 border-end">
                             <span class="text-white-50">Have any questions?</span>
-                            
                         </div>
                         <div class="d-flex align-items-center justify-content-center ms-4 ">
                             <img   height="60px" src="images/logoflyer.jpg" loading="lazy" class="w-10 object-cover aspect-square rounded-full" alt="">
@@ -119,7 +118,7 @@
 
         <!-- Carousel Start -->
         <!-- <div class="container-fluid px-0"> -->
-            <div class="container-flui px-0">
+            <div class="container-fluid px-0">
             <div id="carouselId" class="carousel slide" data-bs-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-bs-target="#carouselId" data-bs-slide-to="0" class="active" aria-current="true" aria-label="First slide"></li>
