--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -211,7 +212,7 @@
                         </div>
                     </div>
                     <div class="col-lg-7 col-md-6 col-sm-12 wow fadeIn" data-wow-delay=".5s">
-                        <h5 class="text-primary">Why Attend?</h5>
+                        <h5 class="text-w" style="color:  #842281;" >Why Attend?</h5>
                         <p class="mb-4">Join us at RCCG Higher Ground Assembly’s Possibility Power Conference, a transformative event running for over 15 years. Experience profound spiritual growth through impactful teachings, dynamic worship, and powerful prayers. Connect with a vibrant community and gain tools to unlock your God-given potential. Don’t miss this life-changing opportunity!.</p>
                         <!-- <p class="mb-4">Pellentesque aliquam dolor eget urna ultricies tincidunt. Nam volutpat libero sit amet leo cursus, ac viverra eros tristique. Morbi quis quam mi. Cras vel gravida eros. Proin scelerisque quam nec elementum viverra. Suspendisse viverra hendrerit diam in tempus.</p>
                         <a href="" class="btn btn-secondary rounded-pill px-5 py-3 text-white">More Details</a> -->
@@ -316,7 +317,11 @@
                     <!-- <h5 class="text-primary">Our Project</h5> -->
                     <h1 style="background:  #842281;;" class="text-white p-3 rounded-pill">Guest Ministers</h1>
                 </div>
-                <div class="row g-5">
+                <div class="row g-5"  data-aos="fade-up"
+                data-aos-offset="200"
+                data-aos-delay="50"
+                data-aos-duration="1000"
+                data-aos-easing="ease-in-out">
                     <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
                         <div class="project-item">
                             <div class="project-img">
@@ -942,7 +947,7 @@
 
 
         <!-- Back to Top -->
-        <a href="#" class="btn btn-secondary btn-square rounded-circle back-to-top"><i class="fa fa-arrow-up text-white"></i></a>
+        <a href="#" class="btn  btn-square rounded-circle back-to-top" style="background-color:  #842281;"><i class="fa fa-arrow-up text-white"></i></a>
 
         
         <!-- JavaScript Libraries -->
@@ -1010,6 +1015,10 @@
             }
             setInterval(countDown , 1000)
         </script>
+          <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+          <script>
+            AOS.init();
+          </script>
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
