--- a/just/index.html
+++ b/just/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RCCG Higher Ground Assembly - Pressing Forward, Making Potentials Real</title>
-    <link href="../css/output.css" rel="stylesheet" />
+    <link href="../csss/output.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/0a85dbbf01.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css" rel="stylesheet" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
