--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                 <!-- <a href="" class="me-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn1 animated fadeInLeft">Read More</button></a>
                                 <a href="" class="ms-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn2 animated fadeInRight">Contact Us</button></a> -->
 
-                                <a href="https://www.eventbrite.com/e/possibility-power-conference-2024-tickets-952061420337?utm-campaign=social&utm-content=attendeeshare&utm-medium=discovery&utm-term=listing&utm-source=cp&aff=ebdsshcopyurl" class="me-2"><button type="button"  style="background-color: #A4C639;" class="px-4 py-sm-3 px-sm-5 btn  rounded-pill carousel-content-btn1 animated fadeInLeft">GET TICKETS</button></a>
+                                <a href="https://www.eventbrite.com/e/possibility-power-conference-2024-tickets-952061420337?utm-campaign=social&utm-content=attendeeshare&utm-medium=discovery&utm-term=listing&utm-source=cp&aff=ebdsshcopyurl" class="me-2 text-white"><button type="button"  style="background-color:  #4c145a;" class="px-4 py-sm-3 px-sm-5 btn  text-white rounded-pill carousel-content-btn1 animated fadeInLeft">REGISTER</button></a>
                                 <!-- <a href="" class="ms-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn2 animated fadeInRight">Contact Us</button></a> -->
                             </div>
                         </div>
@@ -169,7 +169,7 @@
                                 <!-- <h6 class="text-secondary h4 animated fadeInUp"> Power Conference 2024</h6> -->
                                 <h1 class="text-white display-1 mb-4 animated fadeInLeft"> flourish and inspire others</h1>
                                 <!-- <p class="mb-4 text-white fs-5 animated fadeInDown">Together, we nurture the seeds of greatness within ourselves to flourish and inspire others</p> -->
-                                <a href="" class="me-2"><button type="button"  style="background-color: #A4C639;" class="px-4 py-sm-3 px-sm-5 btn  rounded-pill carousel-content-btn1 animated fadeInLeft">GET TICKETS</button></a>
+                                <a href="" class="me-2 text-white"><button type="button"  style="background-color:  #4c145a;" class="px-4 py-sm-3 px-sm-5 btn text-white  rounded-pill carousel-content-btn1 animated fadeInLeft">REGISTER</button></a>
                                 <!-- <a href="" class="ms-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn2 animated fadeInRight">Contact Us</button></a> -->
                             </div>
                         </div>
@@ -240,7 +240,7 @@
                     <div class="container mt-5">
                         <div class="wow fadeIn video-container border rounded" data-wow-delay=".5s">
                             <iframe 
-                                src="https://www.youtube.com/embed/ZZvTQcAYXj4" 
+                                src="https://www.youtube.com/embed/dRAWkQ07vgo" 
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                                 allowfullscreen>
                             </iframe>
@@ -263,7 +263,7 @@
                         </div>
                     </div>
                     <div class="col-lg-7 col-md-6 col-sm-12 wow fadeIn" data-wow-delay=".5s">
-                        <h5 class="text-w" style="color:  #842281;" >Why Attend?</h5>
+                        <h5 class="text-w" style="color:   #4c145a;" >Why Attend?</h5>
                         <p class="mb-4">Join us at RCCG Higher Ground Assembly’s Possibility Power Conference, a transformative event running for over 15 years. Experience profound spiritual growth through impactful teachings, dynamic worship, and powerful prayers. Connect with a vibrant community and gain tools to unlock your God-given potential. Don’t miss this life-changing opportunity!.</p>
                         <!-- <p class="mb-4">Pellentesque aliquam dolor eget urna ultricies tincidunt. Nam volutpat libero sit amet leo cursus, ac viverra eros tristique. Morbi quis quam mi. Cras vel gravida eros. Proin scelerisque quam nec elementum viverra. Suspendisse viverra hendrerit diam in tempus.</p>
                         <a href="" class="btn btn-secondary rounded-pill px-5 py-3 text-white">More Details</a> -->
@@ -366,7 +366,7 @@
             <div class="container">
                 <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
                     <!-- <h5 class="text-primary">Our Project</h5> -->
-                    <h1 style="background:  #842281;;" class="text-white p-3 rounded-pill">Guest Ministers</h1>
+                    <h1 style="background:   #4c145a;;" class="text-white p-3 rounded-pill">Guest Ministers</h1>
                 </div>
                 <div class="row g-5"  data-aos="fade-up"
                 data-aos-offset="200"
@@ -466,7 +466,7 @@
                 <div class="container">
                     <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
                         <!-- <h5 class="text-primary">Our Project</h5> -->
-                         <div class="   border-0 p-3 rounded-pill" style="background:  #842281;;"> 
+                         <div class="   border-0 p-3 rounded-pill" style="background:  #4c145a;;"> 
                             <h1 class="text-white">Worship Ministers</h1>
                          </div>
                     
@@ -974,18 +974,18 @@
                         </div> -->
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <a href="#" class="h3 " style="color:#842281 ;">Contact Us</a>
+                        <a href="#" class="h3 " style="color:#4c145a;">Contact Us</a>
                         <div class="text-white mt-4 d-flex flex-column contact-link">
-                            <a href="#" class="pb-3 text-light border-bottom border-primary"><i  style="color:#842281 ;" class="fas fa-map-marker-alt  me-2"></i> 2021 LORD BALTIMORE DRIVE . WINDSOR MILL ,MD 21244   USA</a>
-                            <a href="#" class="py-3 text-light border-bottom border-primary"><i class="fas fa-phone-alt  me-2" style="color:#842281 ;"></i> [410] 944-3323</a>
-                            <a href="#" class="py-3 text-light border-bottom border-primary"><i class="fas fa-envelope  me-2" style="color:#842281 ;"></i> ADMIN@RCCGHIGHERGROUND.ORG</a>
+                            <a href="#" class="pb-3 text-light border-bottom border-primary"><i  style="color:#4c145a; ;" class="fas fa-map-marker-alt  me-2"></i> 2021 LORD BALTIMORE DRIVE . WINDSOR MILL ,MD 21244   USA</a>
+                            <a href="#" class="py-3 text-light border-bottom border-primary"><i class="fas fa-phone-alt  me-2" style="color:#4c145a; ;"></i> [410] 944-3323</a>
+                            <a href="#" class="py-3 text-light border-bottom border-primary"><i class="fas fa-envelope  me-2" style="color:#4c145a; ;"></i> ADMIN@RCCGHIGHERGROUND.ORG</a>
                         </div>
                     </div>
                 </div>
                 <hr class="text-light mt-5 mb-4">
                 <div class="row">
-                    <div class="col-md-6 text-center text-md-start" style="color:#842281 ;">
-                        <span style="color:#842281 ;" class="text-light"><a href="#" class="" class="text-light"  style="color:#842281 ;"><i  class="fas fa-copyright me-2"></i>PPC2024</a>, All right reserved.</span>
+                    <div class="col-md-6 text-center text-md-start" style="color:#4c145a; ;">
+                        <span style="color:#4c145a;;" class="text-light"><a href="#" class="" class="text-light"  style="color:#842281 ;"><i  class="fas fa-copyright me-2"></i>PPC2024</a>, All right reserved.</span>
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
@@ -998,7 +998,7 @@
 
 
         <!-- Back to Top -->
-        <a href="#" class="btn  btn-square rounded-circle back-to-top" style="background-color:  #842281;"><i class="fa fa-arrow-up text-white"></i></a>
+        <a href="#" class="btn  btn-square rounded-circle back-to-top" style="background-color:  #4c145a;"><i class="fa fa-arrow-up text-white"></i></a>
 
         
         <!-- JavaScript Libraries -->
