--- a/index.html
+++ b/index.html
@@ -859,7 +859,7 @@
         <div class="container-fluid py-5 mb-5">
             <div class="container">
                 <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
-                    <h5 class="text-prim" style="color:  #842281;">Get In Touch</h5>
+                    <h5 class="text-prim" style="color: #4c145a;;">Get In Touch</h5>
                     <!-- <h1 class="mb-3">Contact for any query</h1>
                     <p class="mb-2">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p> -->
                 </div>
