--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                 <!-- <a href="" class="me-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn1 animated fadeInLeft">Read More</button></a>
                                 <a href="" class="ms-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn2 animated fadeInRight">Contact Us</button></a> -->
 
-                                <a href="https://www.eventbrite.com/e/possibility-power-conference-2024-tickets-952061420337?utm-campaign=social&utm-content=attendeeshare&utm-medium=discovery&utm-term=listing&utm-source=cp&aff=ebdsshcopyurl" class="me-2 text-white"><button type="button"  style="background-color:  #4c145a;" class="px-4 py-sm-3 px-sm-5 btn  text-white rounded-pill carousel-content-btn1 animated fadeInLeft">REGISTER</button></a>
+                                <a href="https://www.eventbrite.com/e/possibility-power-conference-2024-tickets-952061420337?utm-campaign=social&utm-content=attendeeshare&utm-medium=discovery&utm-term=listing&utm-source=cp&aff=ebdsshcopyurl" class="me-2 text-white"><button type="button"  style="background-color: #008000;" class="px-4 py-sm-3 px-sm-5 btn  text-white rounded-pill carousel-content-btn1 animated fadeInLeft">REGISTER</button></a>
                                 <!-- <a href="" class="ms-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn2 animated fadeInRight">Contact Us</button></a> -->
                             </div>
                         </div>
@@ -169,7 +169,7 @@
                                 <!-- <h6 class="text-secondary h4 animated fadeInUp"> Power Conference 2024</h6> -->
                                 <h1 class="text-white display-1 mb-4 animated fadeInLeft"> flourish and inspire others</h1>
                                 <!-- <p class="mb-4 text-white fs-5 animated fadeInDown">Together, we nurture the seeds of greatness within ourselves to flourish and inspire others</p> -->
-                                <a href="" class="me-2 text-white"><button type="button"  style="background-color:  #4c145a;" class="px-4 py-sm-3 px-sm-5 btn text-white  rounded-pill carousel-content-btn1 animated fadeInLeft">REGISTER</button></a>
+                                <a href="" class="me-2 text-white"><button type="button"  style="background-color:  #008000;" class="px-4 py-sm-3 px-sm-5 btn text-white  rounded-pill carousel-content-btn1 animated fadeInLeft">REGISTER</button></a>
                                 <!-- <a href="" class="ms-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn2 animated fadeInRight">Contact Us</button></a> -->
                             </div>
                         </div>
