--- a/index.html
+++ b/index.html
@@ -257,9 +257,9 @@
             <div class="carousel-caption">
               <div class="container carousel-content">
                 <h1 class="text-white display-1 mb-4 animated fadeInLeft">
-                  Flourish and Inspire Others
+                  <!-- Flourish and Inspire Others -->
                 </h1>
-                <a href="" class="me-2 text-white">
+                <!-- <a href="" class="me-2 text-white">
                   <button
                     type="button"
                     style="background-color: #008000"
@@ -267,7 +267,7 @@
                   >
                     REGISTER
                   </button>
-                </a>
+                </a> -->
                 <!-- Countdown timer -->
                 <div
                 class="d-flex justify-content-center align-items-center"
