--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
             <div class="project-item">
               <div class="project-img">
                 <img
-                  src="images/ayo.jpg"
+                  src="images/daddy.jpg"
                   class="img-fluid w-100 rounded"
                   alt=""
                 />
@@ -632,7 +632,7 @@
             <div class="project-item">
               <div class="project-img">
                 <img
-                  src="images/funmi.jpg"
+                  src="images/blackwoman.jpg"
                   class="img-fluid w-100 rounded"
                   alt=""
                 />
@@ -653,7 +653,7 @@
             <div class="project-item">
               <div class="project-img">
                 <img
-                  src="images/bayoguy.jpg"
+                  src="images/bayo.jpg"
                   class="img-fluid w-100 rounded"
                   alt=""
                 />
