--- a/index.html
+++ b/index.html
@@ -270,12 +270,12 @@
                 </a> -->
                 <!-- Countdown timer -->
                 <div
-                class="d-flex justify-content-center align-items-center"
+                class=" container d-flex justify-content-center align-items-center"
                 style="height: 100vh"
               >
                 <div
-                  class="countdowns d-none d-md-flex flex-md-row align-items-center text-center gap-3 gap-md-4 bg-white bg-opacity-50 p-4 p-md-4 rounded shadow-md"
-                  style="z-index: 999999999; width: 100%; margin-top: 76%"
+                  class="countdowns  d-none d-md-flex flex-md-row align-items-center text-center gap-3 gap-md-4 bg-white bg-opacity-50 p-4 p-md-4 rounded shadow-md"
+                  style="z-index: 999999999; ; margin-top: 76%"
                 >
                   <div>
                     <p class="day display-4" style="color: #842281">00</p>
