--- a/index.html
+++ b/index.html
@@ -221,8 +221,34 @@
                     REGISTER
                   </button>
                 </a>
+                <div
+                class="container d-flex justify-content-center align-items-center"
+                style="height: 100vh"
+              >
+                <div
+                  class="countdowns d-none d-md-flex flex-md-row align-items-center text-center gap-3 gap-md-4 bg-white bg-opacity-50 p-4 p-md-4 rounded shadow-md"
+                  style="z-index: 999999999; margin-top: 76%"
+                >
+                  <div>
+                    <p class="day display-4" style="color: #842281">00</p>
+                    <h1 class="fw-semibold h6">Days</h1>
+                  </div>
+                  <div>
+                    <p class="hours display-4" style="color: #842281">00</p>
+                    <h1 class="fw-semibold h6">Hours</h1>
+                  </div>
+                  <div>
+                    <p class="mins display-4" style="color: #842281">00</p>
+                    <h1 class="fw-semibold h6">Min</h1>
+                  </div>
+                  <div>
+                    <p class="sec display-4" style="color: #842281">00</p>
+                    <h1 class="fw-semibold h6">Sec</h1>
+                  </div>
+                </div>
+              </div>
                 <!-- Countdown timer -->
-                 <!-- <div
+                <!-- <div
                   class="d-flex justify-content-center align-items-center"
                   style="height: 100vh"
                 >
@@ -257,9 +283,9 @@
             <div class="carousel-caption">
               <div class="container carousel-content">
                 <h1 class="text-white display-1 mb-4 animated fadeInLeft">
-                  <!-- Flourish and Inspire Others -->
+                  Flourish and Inspire Others
                 </h1>
-                <!-- <a href="" class="me-2 text-white">
+                <a href="" class="me-2 text-white">
                   <button
                     type="button"
                     style="background-color: #008000"
@@ -267,34 +293,34 @@
                   >
                     REGISTER
                   </button>
-                </a> -->
+                </a>
                 <!-- Countdown timer -->
-                <div
-                class=" container d-flex justify-content-center align-items-center"
-                style="height: 100vh"
-              >
-                <div
-                  class="countdowns  d-none d-md-flex flex-md-row align-items-center text-center gap-3 gap-md-4 bg-white bg-opacity-50 p-4 p-md-4 rounded shadow-md"
-                  style="z-index: 999999999; ; margin-top: 76%"
+                <!-- <div
+                  class="container d-flex justify-content-center align-items-center"
+                  style="height: 100vh"
                 >
-                  <div>
-                    <p class="day display-4" style="color: #842281">00</p>
-                    <h1 class="fw-semibold h6">Days</h1>
+                  <div
+                    class="countdowns d-none d-md-flex flex-md-row align-items-center text-center gap-3 gap-md-4 bg-white bg-opacity-50 p-4 p-md-4 rounded shadow-md"
+                    style="z-index: 999999999; margin-top: 76%"
+                  >
+                    <div>
+                      <p class="day display-4" style="color: #842281">00</p>
+                      <h1 class="fw-semibold h6">Days</h1>
+                    </div>
+                    <div>
+                      <p class="hours display-4" style="color: #842281">00</p>
+                      <h1 class="fw-semibold h6">Hours</h1>
+                    </div>
+                    <div>
+                      <p class="mins display-4" style="color: #842281">00</p>
+                      <h1 class="fw-semibold h6">Min</h1>
+                    </div>
+                    <div>
+                      <p class="sec display-4" style="color: #842281">00</p>
+                      <h1 class="fw-semibold h6">Sec</h1>
+                    </div>
                   </div>
-                  <div>
-                    <p class="hours display-4" style="color: #842281">00</p>
-                    <h1 class="fw-semibold h6">Hours</h1>
-                  </div>
-                  <div>
-                    <p class="mins display-4" style="color: #842281">00</p>
-                    <h1 class="fw-semibold h6">Min</h1>
-                  </div>
-                  <div>
-                    <p class="sec display-4" style="color: #842281">00</p>
-                    <h1 class="fw-semibold h6">Sec</h1>
-                  </div>
-                </div>
-              </div> 
+                </div> -->
               </div>
             </div>
           </div>
