--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 
     <!-- Navbar Start   bg-primary-->
     <div class="container-fluid" style="background-color: #ffffff">
-      <div class="conta">
-        <nav class="navbar navbar-dark">
+      <div class="contai">
+        <nav class="navbar d-flex align-items-center navbar-dark">
           <a href="index.html" class="navbar-brand">
             <div>
               <img
@@ -581,7 +581,7 @@
         >
           <!-- <h5 class="text-primary">Our Project</h5> -->
           <h1 style="background: #4c145a" class="text-white p-3 rounded-pill">
-            Guest Ministers
+             Ministers
           </h1>
         </div>
         <div
