--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
               <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
           </div>
-          <div class="d-none d-xl-flex flex-shirink-0">
+          <div class="d-no d-xl-flex flex-shirink-0">
             <div
               id="phone-tada"
-              class="d-flex align-items-center justify-content-center me-4"
+              class="d-flex align-items-center justify-content-center me-4  "
             >
               <a href="" class="position-relative animated tada infinite">
                 <!-- <i class="fa fa-phone-alt text-white fa-2x"></i> -->
@@ -140,7 +140,7 @@
                                 </div> -->
               </a>
             </div>
-            <div class="d-flex flex-column pe-4 text-center">
+            <div class="d-flex  d-none pe-4 text-center">
               <h1 class="text-center h1" style="color: #922222">
                 Possibility Power Conference 2024
               </h1>
@@ -148,7 +148,7 @@
             <div class="d-flex flex-column pe-4 border-end">
               <span class="text-white-50">Have any questions?</span>
             </div>
-            <div class="d-flex align-items-center justify-content-center ms-4">
+            <div class="d-flex align-items-center justify-content-center ms-4 pb-3">
               <img
                 height="60px"
                 src="images/logoflyer.jpg"
