--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           <div class="d-no d-xl-flex flex-shirink-0">
             <div
               id="phone-tada"
-              class="d-flex align-items-center justify-content-center me-4  "
+              class="d-flex align-items-center justify-content-center me-4"
             >
               <a href="" class="position-relative animated tada infinite">
                 <!-- <i class="fa fa-phone-alt text-white fa-2x"></i> -->
@@ -140,7 +140,7 @@
                                 </div> -->
               </a>
             </div>
-            <div class="d-flex  d-none pe-4 text-center">
+            <div class="d-flex d-none pe-4 text-center">
               <h1 class="text-center h1" style="color: #922222">
                 Possibility Power Conference 2024
               </h1>
@@ -148,7 +148,9 @@
             <div class="d-flex flex-column pe-4 border-end">
               <span class="text-white-50">Have any questions?</span>
             </div>
-            <div class="d-flex align-items-center justify-content-center ms-4 pb-3">
+            <div
+              class="d-flex align-items-center justify-content-center ms-4 pb-3"
+            >
               <img
                 height="60px"
                 src="images/logoflyer.jpg"
@@ -222,31 +224,31 @@
                   </button>
                 </a>
                 <div
-                class="container d-flex justify-content-center align-items-center"
-                style="height: 27vh"
-              >
-                <div
-                  class="countdowns d-none d-md-flex flex-md-row align-items-center text-center gap-3 gap-md-4 bg-white bg-opacity-50 p-4 p-md-4 rounded shadow-md"
-                  style="z-index: 999999999; margin-top: 22%"
+                  class="container d-flex justify-content-center align-items-center mt-5"
+                  style="height: 2vh"
                 >
-                  <div>
-                    <p class="day display-4" style="color: #842281">00</p>
-                    <h1 class="fw-semibold h6">Days</h1>
-                  </div>
-                  <div>
-                    <p class="hours display-4" style="color: #842281">00</p>
-                    <h1 class="fw-semibold h6">Hours</h1>
-                  </div>
-                  <div>
-                    <p class="mins display-4" style="color: #842281">00</p>
-                    <h1 class="fw-semibold h6">Min</h1>
-                  </div>
-                  <div>
-                    <p class="sec display-4" style="color: #842281">00</p>
-                    <h1 class="fw-semibold h6">Sec</h1>
+                  <div
+                    class="countdowns d-none d-md-flex flex-md-row align-items-center text-center gap-3 gap-md-4 bg-white bg-opacity-50 p-4 p-md-4 rounded shadow-md"
+                    style="z-index: 999999999; margin-top: 12%"
+                  >
+                    <div>
+                      <p class="day display-4" style="color: #842281">00</p>
+                      <h1 class="fw-semibold h6">Days</h1>
+                    </div>
+                    <div>
+                      <p class="hours display-4" style="color: #842281">00</p>
+                      <h1 class="fw-semibold h6">Hours</h1>
+                    </div>
+                    <div>
+                      <p class="mins display-4" style="color: #842281">00</p>
+                      <h1 class="fw-semibold h6">Min</h1>
+                    </div>
+                    <div>
+                      <p class="sec display-4" style="color: #842281">00</p>
+                      <h1 class="fw-semibold h6">Sec</h1>
+                    </div>
                   </div>
                 </div>
-              </div>
                 <!-- Countdown timer -->
                 <!-- <div
                   class="d-flex justify-content-center align-items-center"
@@ -581,7 +583,7 @@
         >
           <!-- <h5 class="text-primary">Our Project</h5> -->
           <h1 style="background: #4c145a" class="text-white p-3 rounded-pill">
-             Ministers
+            Ministers
           </h1>
         </div>
         <div
